# toster

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  sio2jail
.github/workflows/: ci.yml
src/: args.rs  checker.rs  compiler.rs  flag.rs  formatted_error.rs  generic_utils.rs  main.rs  output.rs  pipes.rs  prepare_input.rs  run.rs  sio2jail.rs  temp_files.rs  test_error.rs  test_errors.rs  test_result.rs  test_summary.rs  testing_utils.rs
src/executor/: common.rs  mod.rs  process.rs  simple.rs  sio2jail.rs
src/owned_child/: mod.rs  unix.rs  windows.rs
