[package]
name = "toster"
description = "A simple-as-toast tester for C++ solutions to competitive programming exercises"
repository = "https://github.com/MikolajKolek/toster"
homepage = "https://github.com/MikolajKolek/toster"
authors = ["Mikołaj Kołek"]
readme = "README.md"
license = "MIT"
version = "1.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
colored = "2.0.4"
wait-timeout = "0.2.0"
comfy-table = "7.1.0"
tempfile = "3.8.1"
terminal_size = "0.3.0"
human-sort = "0.2.2"
human-panic = "1.2.2"
is_executable = "1.0.1"
ctrlc = "3.4.1"
directories = "5.0.1"
which = "5.0.0"
libc = "0.2.153"
perf-event-open-sys = "4.0.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
command-fds = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
memfile = "0.3.2"

[build-dependencies]
directories = "5.0.1"