[package]
name = "toster"
description = "A simple-as-toast tester for C++ solutions to competitive programming exercises"
repository = "https://github.com/MikolajKolek/toster"
homepage = "https://github.com/MikolajKolek/toster"
authors = ["Mikołaj Kołek"]
readme = "README.md"
license = "MIT"
version = "1.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
colored = "2.0.4"
atomic-counter = "1.0.1"
lazy_static = "1.4.0"
wait-timeout = "0.2.0"
comfy-table = "7.1.0"
tempfile = "3.8.1"
terminal_size = "0.3.0"
numeric-sort = "0.1.3"
human-panic = "1.2.2"
is_executable = "1.0.1"
ctrlc = "3.4.1"
once_cell = "1.18.0"
directories = "5.0.1"
which = "5.0.0"
crossbeam-queue = "0.3.8"
num_cpus = "1.16.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
command-fds = "0.2.3"

[build-dependencies]
directories = "5.0.1"